force-app/core/main/default/objects/Demo_Theme__c/Demo_Theme__c.object-meta.xml
<CustomObject>
    <label>Brand Kit</label>
    <nameField>
        <label>Brand Kit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brand Kits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>