force-app/core/main/default/objects/Demo_Theme__c/fields/Accent_Color__c.field-meta.xml
<CustomField>
    <fullName>Accent_Color__c</fullName>
    <label>Accent Color</label>
    <length>32</length>
    <type>Text</type>
</CustomField>