force-app/core/main/default/objects/Demo_Theme__c/fields/Background_Gradient__c.field-meta.xml
<CustomField>
    <fullName>Background_Gradient__c</fullName>
    <label>Background Gradient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>