force-app/core/main/default/objects/Demo_Theme__c/fields/Font_Family__c.field-meta.xml
<CustomField>
    <fullName>Font_Family__c</fullName>
    <label>Font Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>