force-app/core/main/default/objects/Demo_Theme__c/fields/Header_Style__c.field-meta.xml
<CustomField>
    <fullName>Header_Style__c</fullName>
    <label>Header Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gradient</fullName>
                <default>true</default>
                <label>Gradient</label>
            </value>
            <value>
                <fullName>Solid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>