force-app/core/main/default/objects/Demo_Theme__c/fields/Logo_Static_Resource__c.field-meta.xml
<CustomField>
    <fullName>Logo_Static_Resource__c</fullName>
    <label>Logo Static Resource</label>
    <length>128</length>
    <type>Text</type>
</CustomField>