force-app/core/main/default/objects/Demo_Theme__c/fields/Secondary_Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Logo_URL__c</fullName>
    <label>Secondary Logo URL</label>
    <description>Smaller/mark logo used for avatars and footers (vs the primary logo used in the hero/header).</description>
    <type>Url</type>
</CustomField>