force-app/core/main/default/objects/Demo_Theme__c/listViews/All_Themes.listView-meta.xml
<ListView>
    <fullName>All_Themes</fullName>
    <columns>NAME</columns>
    <columns>Primary_Color__c</columns>
    <columns>Accent_Color__c</columns>
    <columns>Header_Style__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Brand Kits</label>
</ListView>