force-app/core/main/default/objects/Demo_Theme__c/listViews/My_Themes.listView-meta.xml
<ListView>
    <fullName>My_Themes</fullName>
    <columns>NAME</columns>
    <columns>Primary_Color__c</columns>
    <columns>Accent_Color__c</columns>
    <columns>Header_Style__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Brand Kits</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>